--- a/package.json
+++ b/package.json
@@ -3,19 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
+    "file-saver": "^2.0.5",
     "firebase": "^10.4.0",
+    "js-file-download": "^0.4.12",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-datepicker": "^4.18.0",
+    "react-datetime-picker": "^5.5.2",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
+  },
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -42,6 +55,4 @@
   "devDependencies": {
     "tailwindcss": "^3.3.3"
   }
-  
-
 }
